syntax = "proto3";

package v1;

option go_package = "identity/v1;v1";


message User {
  string id = 1;
  string name = 2;
  string email = 3;
}

// --- Register ----
message RegisterRequest {
  string name = 1;
  string email = 2;
  string password = 3;
}

message RegisterResponse {
  User user = 1;
}

// --- Login ---
message LoginRequest {
  string email = 1;
  string password = 2;
}

message LoginResponse {
  User user = 1;
  string token = 2;
}

// --- Get My Profile ---
message GetMyProfileRequest{}

message GetMyProfileResponse{
  User user = 1;
}

// --- Service ---
service IdentityService {
  rpc Register(RegisterRequest) returns (RegisterResponse);

  rpc Login(LoginRequest) returns (LoginResponse);

  rpc GetMyProfile(GetMyProfileRequest) returns (GetMyProfileResponse);
}